Implement nsStyleAnimation::Add and Interpolate using the same code underneath.  (Bug 523193)  r=dholbert  sr=bzbarsky